@@ -13,7 +13,7 @@ BuildRequires: perl-ExtUtils-Depends >= @PERL_EXTUTILS_DEPENDS@
 BuildRequires: perl-ExtUtils-PkgConfig >= @PERL_EXTUTILS_DEPENDS@
 BuildRequires: perl-Glib >= @PERL_GLIB@
 BuildRequires: perl-Gtk2 >= @PERL_GTK@
-Requires: libgnomeprintui22 >= @GNOMEPRINT_RUN@
+Requires: libgnomeprintui22 >= %(pkg-config --modversion libgnomeprintui-2.2)
 Requires: perl-Glib >= @PERL_GLIB@
 Requires: perl-Gtk2 >= @PERL_GTK@
 Requires: %(perl -MConfig -le 'if (defined $Config{useithreads}) { print "perl(:WITH_ITHREADS)" } else { print "perl(:WITHOUT_ITHREADS)" }')
